--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <title>Filmoteka</title>
   <link rel="stylesheet" href="./sass/main.scss" />
   <script type="module" src="./index.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
 </head>
 
 <body>
